Issue #55 and #56 Wish list visibility and book thumbnail additions

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -164,6 +164,11 @@ nav.main {
   border: 1px solid #ccc;
   box-shadow: 1px 1px 4px #ccc;
 }
+.thumb-book-cover {
+  height: 25px;
+  width: 15px;
+  float: left;
+}
 .book-description {
   position: relative;
   height: 9em;
